Try to fix some blackout layout issues

--- a/src/css/poetry.less
+++ b/src/css/poetry.less
@@ -3,6 +3,6 @@
     flex: 1;
     width: 500px;
     max-width: 100%;
-    margin: 30px auto 100px;
+    margin: 20px auto;
   }
 }
