--- a/src/css/web-story.less
+++ b/src/css/web-story.less
@@ -12,6 +12,26 @@ web-story {
     outline: none;
   }
 
+  [hidden] {
+    display: none !important;
+  }
+
+  section {
+    display: flex;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    // background: linear-gradient(to bottom, #FFD, #FFB);
+    padding-bottom: 80px;
+  }
+
+  [intangible] {
+    pointer-events: none;
+  }
+
   .backdrop {
     position: fixed;
     top: 0;
@@ -60,76 +80,5 @@ web-story {
     @media @mobile {
       max-width: 300px;
     }
-  }
-
-  [hidden] {
-    display: none !important;
-  }
-
-  section {
-    display: flex;
-    min-height: 100vh;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    position: relative;
-    // background: linear-gradient(to bottom, #FFD, #FFB);
-  }
-
-  [intangible] {
-    pointer-events: none;
-  }
-
-  .autoplay {
-    input {
-      opacity: 0;
-      position: absolute;
-      left: -9999px;
-    }
-
-    label {
-      font-family: @gotham;
-      font-size: 12px;
-      font-style: italic;
-      padding: 5px 8px 5px 10px;
-      border: 2px solid white;
-      border-radius: 20px;
-      color: white;
-      background-color: transparent;
-      white-space: nowrap;
-      cursor: pointer;
-    }
-
-    label::before {
-      content: "✘";
-      display: inline-block;
-      width: 15px;
-      height: 15px;
-      border: 2px solid white;
-      border-radius: 100px;
-      transition: background-color .2s;
-      margin-right: 10px;
-      margin-top: 10px;
-    }
-
-    input:checked + label {
-      background-color: transparent;
-      color: white;
-      border: 2px solid white;
-    }
-
-    input:checked + label::before {
-      content: "✔";
-      background-color: white;
-      border-color: white;
-      color: @unbiased;
-    }
-  }
-
-  .autoplay-text {
-    font-family: @gotham;
-    font-size: 12px;
-    font-style: italic;
   }
 }
